Fix css overflow

--- a/aspnet-core/src/DTKH2024.SbinSolution.Web.Mvc/wwwroot/metronic/themes/default/css/style.bundle.css
+++ b/aspnet-core/src/DTKH2024.SbinSolution.Web.Mvc/wwwroot/metronic/themes/default/css/style.bundle.css
@@ -8939,7 +8939,8 @@ textarea.form-control-lg {
 }
 
 .align-items-center {
-  align-items: center !important;
+    align-items: center !important;
+    overflow-x: auto;
 }
 
 .align-items-baseline {
